--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "types": ["node", "cookie", "phoenix"],
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
